gradient and links added

--- a/index.html
+++ b/index.html
@@ -12,18 +12,23 @@
     
     <div>
         <h2>About me</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat vel praesentium veritatis beatae reiciendis maiores, eligendi inventore at. Facilis reiciendis qui, exercitationem quaerat quos iure et fugiat cupiditate pariatur ratione!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat vel praesentium veritatis beatae reiciendis maiores, eligendi inventore at. Facilis reiciendis qui, exercitationem quaerat quos iure et fugiat cupiditate pariatur ratione!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, obcaecati magni qui odit neque corrupti autem enim molestiae repellendus tempore consectetur culpa cupiditate, pariatur totam reprehenderit maiores aspernatur iusto omnis!
+        </p>
     </div>
     <div>
-        <h3>My work</h3>
+        <h2>You can see my Current projects and completed work here. </h2>
+        <a href="/work.html">View the code</a>
     </div>
-    <div>
-        <h4>Contact info</h4>
-        <a href="">Linkedin</a>
-        <a href="">github</a>
-        <p>Telephone:</p>
-        <p>Email:</p>
+  <footer>
+    <div class="footer-div">
+    <h2>My Contact Information</h2>
+    <a href="">Linkedin</a><br>
+    <a href="https://github.com/pauljl8762">Github</a><br>
+    <p>Telephone Number:</p>
+    <p>Email:</p>
     </div>
+  </footer>
     <script src="main.js"></script>
 </body>
 </html>
