linked the two pages and added more info and style

--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <title>Portfolio</title>
 </head>
 <body>
-    <h1>Welcome to my portfolio</h1>
+    <h1>Welcome to My Portfolio</h1>
     
     <div>
-        <h2>About me</h2>
+        <h2>About Me</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat vel praesentium veritatis beatae reiciendis maiores, eligendi inventore at. Facilis reiciendis qui, exercitationem quaerat quos iure et fugiat cupiditate pariatur ratione!
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, obcaecati magni qui odit neque corrupti autem enim molestiae repellendus tempore consectetur culpa cupiditate, pariatur totam reprehenderit maiores aspernatur iusto omnis!
         </p>
