--- a/work.html
+++ b/work.html
@@ -4,10 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="work.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
     <h1>This is my work</h1>
-    <p>These are projects that have been completed and are works in progress</p>
+    <p>These are projects that have been completed or are works in progress</p>
+    <div class="html-css">
+        <h2>HTML and CSS</h2>
+        <h3>These projects were created using HTML and CSS only</h3>
+    </div>
+    <div class="javascript-add">
+        <h3>These projects add JavaScript to the code</h3>
+    </div>
+    <footer>
+    <a href="/index.html">Return to About Me</a>
+    </footer>
 </body>
 </html>
