--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
     <title>Portfolio</title>
 </head>
 <body>
-    <h1>Welcome to My Portfolio</h1>
-    
+    <nav>
+        <ul>
+            <li><a href="/about.html">About Me</a></li>
+            <li><a href="/work.html">My Projects</a></li>
+            <li><a href="/contact.html">Contact Info</a></li>
+        </ul>
+    </nav>
     <div>
-        <h2>About Me</h2>
+    <h1>Welcome to My Portfolio</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat vel praesentium veritatis beatae reiciendis maiores, eligendi inventore at. Facilis reiciendis qui, exercitationem quaerat quos iure et fugiat cupiditate pariatur ratione!
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, obcaecati magni qui odit neque corrupti autem enim molestiae repellendus tempore consectetur culpa cupiditate, pariatur totam reprehenderit maiores aspernatur iusto omnis!
         </p>
@@ -23,15 +28,7 @@
         <h2>You can see my Current projects and completed work here. </h2>
         <a href="/work.html">View the code</a>
     </div>
-  <footer>
-    <div class="footer-div">
-    <h2>My Contact Information</h2>
-    <a href="">Linkedin</a><br>
-    <a href="https://github.com/pauljl8762">Github</a><br>
-    <p>Telephone Number:</p>
-    <p>Email:</p>
-    </div>
-  </footer>
+  
     <script src="main.js"></script>
 </body>
 </html>
