starrted nav bar and basic styles to other pages

--- a/work.html
+++ b/work.html
@@ -21,7 +21,9 @@
         <h3>These projects add JavaScript to the code</h3>
     </div>
     <footer>
-    <a href="/index.html">Return to About Me</a>
+        <a href="/contact.html">Contact Info</a><br>
+        <a href="/about.html">About Me</a><br>
+    <a href="/index.html">Return to home</a>
     </footer>
 </body>
 </html>
